Fix zen mode touch alignment
Fixes #1956

--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -187,10 +187,10 @@
     min-height 22px
   &.zen
     > .antagonistUser
-      display none
+      visibility hidden
     > .ratingAndMaterial
       > .rating
-        display none
+        visibility hidden
   &.active
     background-color lighten(bgdark, 8%)
   &.crazy
